--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
-spring.datasource.username=root
-spring.datasource.password= 123456
+spring.datasource.username=weather
+spring.datasource.password=741456789Pp!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
