edit db details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
-spring.datasource.username=weather
-spring.datasource.password=741456789Pp!
+#spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
+spring.datasource.url=mysql://b81f8deaad9f25:f2a893fd@us-cdbr-east-06.cleardb.net
+# spring.datasource.username=weather
+# spring.datasource.password=741456789Pp!
+spring.datasource.username=b81f8deaad9f25
+spring.datasource.password=f2a893fd
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
