--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
+# spring.datasource.username=weather
+# spring.datasource.password=123456Pp@
 spring.datasource.url= mysql://b81f8deaad9f25:f2a893fd@us-cdbr-east-06.cleardb.net
 spring.datasource.username=b81f8deaad9f25
 spring.datasource.password=f2a893fd
