--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-# spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
-# spring.datasource.username=weather
-# spring.datasource.password=123456Pp@
-spring.datasource.url= mysql://b4e07c92de783d:cbb73784@us-cdbr-east-06.cleardb.net
-spring.datasource.username=b4e07c92de783d
-spring.datasource.password=cbb73784
+# Database configuaretion
+spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
+spring.datasource.username=weather
+spring.datasource.password=123456Pp@
+
+# MQTT configuration
+mqtt.broker.url=mqtt://broker.emqx.io:1883
+mqtt.client.id=weather-service
+mqtt.topic.temperature=/topic/temperature
+mqtt.topic.humidity=/topic/humidity
+
+# spring.datasource.url= mysql://b4e07c92de783d:cbb73784@us-cdbr-east-06.cleardb.net
+# spring.datasource.username=b4e07c92de783d
+# spring.datasource.password=cbb73784
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
