--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.26</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -42,12 +43,6 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20180130</version>
-		</dependency>
-
-		<dependency>
-    		<groupId>org.eclipse.paho</groupId>
-    		<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-    		<version>1.2.5</version>
 		</dependency>
 
 		<dependency>
@@ -64,6 +59,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>springboot-weatherapi</finalName>
 	</build>
 
 </project>
