--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
+server.port=8083
+# spring.datasource.url= jdbc:mysql://localhost:3306/weatherapi
+spring.datasource.url= jdbc:mysql://mysql-springboot-container:3306/weatherapi
 spring.datasource.username=weather
 spring.datasource.password=123456Pp@
-# spring.datasource.url= mysql://bafd29da06ffed:869d94b9@us-cdbr-east-06.cleardb.net
-# spring.datasource.username=bafd29da06ffed
-# spring.datasource.password=869d94b9
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
